# 3d-ice

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codemeta.json  package.json  paper.bib  paper.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-pages.yml  release-compat-bundle.yml
scripts/: build_compat_bundle.mjs  capture_explorer_trailer.mjs  combine_antarctica_ocean_current_datasets.py  plot_antarctica_depth_averaged_ocean_speed.py  prepare_antarctica_ocean_currents.py  prepare_antarctica_velocity.py  prepare_basal_friction.py  prepare_bedmachine_antarctica.py  prepare_bedmachine_greenland.py  prepare_greenland_basins.py  prepare_greenland_ocean_currents.py  prepare_greenland_velocity.py  prepare_rise_antarctica.py  prepare_subglacial_hydrology.py  smoke_compat_bundle.mjs
scripts/trailer/: scenes.json  voiceover.md
static/: 404.html  CNAME  index.html  robots.txt  sitemap.xml
static/css/: 3d-ice-home.css
static/js/: 3d-ice-locale.js
static/tools/: 3D-interactive-cryosphere-explorer.html  antarctica-geometry-worker.js
static/tools/3d-antarctica/: index.html
static/tools/3d-ice/: index.html
static/tools/data/: antarctic_ice_velocity_phase_v01_480.meta.json  antarctic_ice_velocity_phase_v01_741.meta.json  antarctica_basal_friction_480.meta.json  antarctica_basal_friction_741.meta.json  (+21 more)
static/zh/: index.html
tests/: conftest.py  test_axis_sampling.py  test_decode_attr.py  test_metadata_schema.py  test_quantize.py  test_stats.py
tests/e2e/: conftest.py  test_explorer_loads.py
(+3 files in other folders)
